Simplify to Set#of